clusters/home/apps/monitoring/uptime-kuma/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: "uptime.layertwo.dev"
    external-dns.alpha.kubernetes.io/target: "proxy-internal.layertwo.dev"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`uptime.layertwo.dev`)
    kind: Rule
    services:
    - name: uptime-kuma
      port: 3001
